Thu Mar 30 15:23:16 BST 2006  Olly Betts <olly@survex.com>

	* python/extra.i: Database's termlist iterator now supports positions.

Tue Mar 28 21:58:21 BST 2006  Olly Betts <olly@survex.com>

	* xapian-bindings.spec.in: Use "%{_libdir}" instead of "/usr/lib" for
	  Python bindings.  Add package for C# bindings.

Thu Mar 16 08:15:43 GMT 2006  Olly Betts <olly@survex.com>

	* php/util.i: Fix handling of bool parameters when resolving
	  overloaded methods and/or default arguments.  This fixes
	  Enquire_sort_by_value() to work when the second argument
	  is specified.

Thu Mar 16 02:48:16 GMT 2006  Olly Betts <olly@survex.com>

	* python/extra.i: Fix TermIter not to try to read termfreqs or
	  positions when they aren't meaningful for the current TermIter.
	* python/smoketest.py: Add feature tests for the various pythonic
	  iterator wrappers; catch Exception objects and print them.

Wed Mar 15 02:21:53 GMT 2006  Olly Betts <olly@survex.com>

	* python/smoketest.py: If a check fails, write a diagnostic message to
	  stderr so we know which check it was!

Wed Mar 15 01:41:40 GMT 2006  Olly Betts <olly@survex.com>

	* python/smoketest.py: Add feature test for MSetIter.

Thu Mar 09 20:11:32 GMT 2006  Olly Betts <olly@survex.com>

	* java/SmokeTest.java,java/native/Query.cc,
	  java/native/org_xapian_XapianJNI.h,java/org/xapian/Query.java,
	  java/org/xapian/XapianJNI.java: Add a new Query constructor
	  wrapper which take an OP_xxx and an array of Query objects.
	* java/org/xapian/Makefile.am,java/org/xapian/errors/Makefile.am:
	  Compiling a .java file to a .class file now deletes the .jar file
	  to ensure it gets updated.

Thu Mar 09 20:08:17 GMT 2006  Olly Betts <olly@survex.com>

	* java/README: Note that some platforms need "-pthread" or similar
	  flags.

Thu Mar 09 17:50:51 GMT 2006  Olly Betts <olly@survex.com>

	* csharp/SmokeTest.cs,xapian.i: Rename Database::GetDoccount() to
	  Database::GetDocCount() for consistency.
